# calorie_tracker

./: README.md  pyproject.toml  requirements.txt  setup.py
src/calorie_tracker/: __init__.py
src/calorie_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/calorie_tracker/cli/: main.py
src/calorie_tracker/database/: __init__.py  base.py
src/calorie_tracker/models/: __init__.py  food.py  user.py
tests/: test_user_model.py
